openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcadia-web
  labels:
    app.kubernetes.io/name: arcadia-web
    app.kubernetes.io/part-of: arcadia-finance
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arcadia-web
  template:
    metadata:
      labels:
        app: arcadia-web
        app.kubernetes.io/part-of: arcadia-finance
    spec:
      containers:
        - name: arcadia-web
          image: docker.io/gregcoward/myarcadia:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
